--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 :root {
-    --color-background: white;
-    --color-on-background: black;
-    --color-background-hover: #eee;
-    --color-on-background-hover: black;
+    --color-background: #1c1b1f;
+    --color-on-background: white;
+    --color-background-hover: #27262c;
+    --color-on-background-hover: white;
     --color-primary: #FA8072;
     --color-on-primary: white;
     --color-error: #de0000;
@@ -17,7 +17,7 @@ header.dark {
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
     --color-primary: #FA8072;
-    --color-primary-disabled: #1f213c;
+    --color-primary-disabled: #FA8072;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
